Changes to apps

--- a/templates/gemba/downtime_user_view.html
+++ b/templates/gemba/downtime_user_view.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h4>Downtime reasons:</h4>
+<br/>
 {% if message_status == "Display" %}
     <div class="alert alert-primary">
     <strong>Info!</strong> You should <a href="{% url 'gemba_app:job-user-view' %}" class="alert-link">choose a job first!</a>
@@ -10,11 +11,10 @@
         Not scheduled to run </a>- {{ pareto.not_scheduled_to_run }} min</p>
 <div>
     <br/>
-    <h6>Downtime reasons</h6>
     <table class="table table-bordered">
         <thead>
         <tr>
-            <th scope="col">Code & Description</th>
+            <th scope="col">Code - Description</th>
             <th scope="col"></th>
             <th scope="col"></th>
             <th scope="col"></th>
@@ -54,6 +54,56 @@
     </tr>
     <tr>
     {% for item in items_list|slice:"25:30" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"30:35" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"35:40" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"40:45" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"45:50" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"50:55" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"55:60" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"60:65" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"65:70" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"70:75" %}
+    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
+    {% endfor %}
+    </tr>
+    <tr>
+    {% for item in items_list|slice:"75:80" %}
     <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
     {% endfor %}
     </tr>
