--- a/templates/gemba/scrap_detail_view.html
+++ b/templates/gemba/scrap_detail_view.html
@@ -4,8 +4,7 @@
 <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Code</th>
-            <th scope="col">Description</th>
+            <th scope="col">Code - Description</th>
             <th scope="col">Qty</th>
             <th scope="col">Job</th>
         </tr>
@@ -13,7 +12,6 @@
         <tbody>
             <tr>
                 <td>{{ object.scrap }}</td>
-                <td>{{ object.scrap.description }}</td>
                 <td>{{ object.qty }}</td>
                 <td>{{ object.job }}</td>
             </tr>
