--- a/templates/tools/return.html
+++ b/templates/tools/return.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 {% block content %}
     {% if request.user.is_staff %}
-    <div><a href="{% url 'tools_app:select-machine' %}">
+    <div><a href="{% url 'tools_app:select-tool' %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Change tool
     </button></a>
     </div>
@@ -81,8 +81,8 @@
             <tbody>
             {% for operation in filter.qs %}
                 <tr>
-                    <td>{{ operation.machine }}</td>
-                    <td>{{ operation.station }}</td>
+                    <td></td>
+                    <td></td>
                     <td>{{ operation.tool }}</td>
                     <td>{{ operation.tool_type }}</td>
                     <td>{{ operation.start_date|date:"Y-m-d" }}</td>
