--- a/templates/gemba/pareto_detail_view.html
+++ b/templates/gemba/pareto_detail_view.html
@@ -21,7 +21,7 @@
     <div><a href="{% url 'gemba_app:pareto-details-update-view' pk=object.pk %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Update
     </button></a>
-        <a href="{% url 'gemba_app:pareto-details-delete-view' pk=object.pk %}">
+        <a href="{% url 'gemba_app:pareto-details-delete' pk=object.pk %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Delete
     </button></a>
     </div>
