--- a/templates/gemba/downtimes_search.html
+++ b/templates/gemba/downtimes_search.html
@@ -6,7 +6,7 @@
         <thead>
         <tr>
             <th scope="col">Last Entry</th>
-            <th scope="col">User / Line</th>
+            <th scope="col">Line</th>
             <th scope="col">Downtime Reason</th>
             <th scope="col">Minutes</th>
             <th scope="col">Job</th>
@@ -17,8 +17,8 @@
         <tbody>
         {% for object in page_obj %}
             <tr>
-                <td>{{ object.datetime|date:'d-m-Y H:i'}}</td>
-                <td>{{ object.user }}</td>
+                <td>{{ object.modified|date:'d-m-Y H:i'}}</td>
+                <td>{{ object.line }}</td>
                 <td>{{ object.downtime }}</td>
                 <td>{{ object.minutes }}</td>
                 <td>{{ object.job }}</td>
