--- a/templates/gemba/downtimes_view.html
+++ b/templates/gemba/downtimes_view.html
@@ -8,7 +8,7 @@
         <thead>
         <tr>
             <th scope="col">Last Entry</th>
-            <th scope="col">User / Line</th>
+            <th scope="col">Line</th>
             <th scope="col">Downtime Reason</th>
             <th scope="col">Minutes</th>
             <th scope="col">Frequency</th>
@@ -20,8 +20,8 @@
         <tbody>
         {% for object in page_obj %}
             <tr>
-                <td>{{ object.datetime|date:'d-m-Y H:i'}}</td>
-                <td>{{ object.user }}</td>
+                <td>{{ object.modified|date:'d-m-Y H:i'}}</td>
+                <td>{{ object.line }}</td>
                 <td>{{ object.downtime }}</td>
                 <td>{{ object.minutes }}</td>
                 <td>{{ object.frequency }}</td>
