--- a/templates/tools/index.html
+++ b/templates/tools/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-        <p><a href="{% url 'tools_app:search-form' %}">Job Update</a></p>
-        <p><a href="{% url 'tools_app:returning' %}">Tool change operations</a></p>
+        <p><a href="{% url 'tools_app:tool-actions' %}">Tool change Actions</a></p>
         <p><a href="{% url 'tools_app:in-use' %}">Tools in use</a></p>
         <p><a href="{% url 'tools_app:machines' %}">Tools vs Jobs</a></p>
         <p><a href="{% url 'tools_app:tools-machines' %}">Tools used on the machine</a></p>
