--- a/templates/tools/tool_actions.html
+++ b/templates/tools/tool_actions.html
@@ -10,8 +10,8 @@
     {% endif %}
     <form method="get">
     <div class="well">
-      <h4 style="margin-top: 0">Tool change operation</h4>
-        <p><a href="{% url 'tools_app:returning' %}">Clear all filters</a></p>
+      <h4 style="margin-top: 0">Tool changes actions</h4>
+        <p><a href="{% url 'tools_app:tool-actions' %}">Clear all filters</a></p>
       <div class="row">
     <div class="form-group col-sm-4 col-md-3">
           {{ filter.form.machine.label_tag }}
@@ -72,8 +72,8 @@
                 <th>Station</th>
                 <th>Tool</th>
                 <th>Tool Type</th>
-                <th>Start Date</th>
-                <th>Finish Date</th>
+                <th>Start Date-Time</th>
+                <th>Finish Date-Time</th>
                 <th>Status</th>
                 <th>Minutes</th>
             </tr>
@@ -81,12 +81,12 @@
             <tbody>
             {% for operation in filter.qs %}
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>{{ operation.machine }}</td>
+                    <td>{{ operation.station }}</td>
                     <td>{{ operation.tool }}</td>
                     <td>{{ operation.tool_type }}</td>
-                    <td>{{ operation.start_date|date:"Y-m-d" }}</td>
-                    <td>{% if operation.finish_date %}{{ operation.finish_date|date:"Y-m-d" }}{% endif %}</td>
+                    <td>{{ operation.start_date|date:"d-m-Y H:i" }}</td>
+                    <td>{% if operation.finish_date %}{{ operation.finish_date|date:"d-m-Y H:i" }}{% endif %}</td>
                     <td>
                         {% if operation.status is True %} Used {% else %} In use {% endif %}
                     </td>
