--- a/templates/gemba/daily_oee_report.html
+++ b/templates/gemba/daily_oee_report.html
@@ -8,7 +8,7 @@
         <thead>
         <tr>
             <th scope="col">Pareto Id</th>
-            <th scope="col">Line / User</th>
+            <th scope="col">Line</th>
             <th scope="col">Shift</th>
             <th scope="col">Job OTG/End</th>
             <th scope="col">Availability</th>
@@ -21,7 +21,7 @@
         {% for item in object_list %}
         <tr>
             <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></td>
-            <td>{{ item.user }}</td>
+            <td>{{ item.line }}</td>
             <td>{{ item.shift }}</td>
             <td>{% if item.job_otg is None %} ----- {% else %} {{ item.job_otg }} {% endif %}</td>
             <td>{{ item.availability }}%</td>
@@ -34,5 +34,9 @@
 </table>
 <div><a href="{% url 'gemba_app:export_daily_oee_report' %}?{{request.GET.urlencode}}">
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export to Excel file
+</button></a></div>
+<br/>
+<div><a href="{% url 'gemba_app:export-to-gemba' %}?{{request.GET.urlencode}}">
+<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export to Gemba file
 </button></a></div>
 {% endblock %}
