--- a/templates/gemba/pareto.html
+++ b/templates/gemba/pareto.html
@@ -86,7 +86,7 @@
         <tbody>
         {% if pareto_list.jobs.all|length == 0 %}
               <tr>
-                <td colspan='5'>No records</td>
+                <td colspan='6'>No records</td>
               </tr>
         {% endif %}
         {% for pareto_item in pareto_list.jobs.all %}
@@ -151,15 +151,14 @@
         <tr>
             <th  scope="col">Downtime Reason</th>
             <th  scope="col" class="central_pos">Min</th>
-            <th  scope="col" class="central_pos">Freq</th>
             <th  scope="col" class="smaller_font">Job</th>
-            <th  scope="col" class="smaller_font">Last Entry</th>
+            <th  scope="col" class="smaller_font">Created</th>
         </tr>
         </thead>
         <tbody>
         {% if down_qs|length == 0 %}
               <tr>
-                <td colspan='5'>No downtimes recorded</td>
+                <td colspan='4'>No downtimes recorded</td>
               </tr>
         {% endif %}
         {% for pareto_item in down_qs %}
@@ -167,9 +166,8 @@
             <td><a href="{% url 'gemba_app:downtime-detail-view' pk=pareto_item.pk %}">
                 {{ pareto_item.downtime.code }} - {{ pareto_item.downtime.description }}</a></td>
             <td class="central_pos">{{ pareto_item.minutes }}</td>
-            <td class="central_pos">{{ pareto_item.frequency }}</td>
             <td class="smaller_font">{{ pareto_item.job }}</td>
-            <td class="smaller_font">{{ pareto_item.modified|date:"H:i" }}</td>
+            <td class="smaller_font">{{ pareto_item.created|date:"H:i" }}</td>
         </tr>
         {% endfor %}
         <tr>
@@ -193,13 +191,13 @@
             <th scope="col">Scrap Reason</th>
             <th scope="col" class="central_pos">Quantity</th>
             <th scope="col" class="smaller_font">Job</th>
-            <th scope="col" class="smaller_font">Last Entry</th>
+            <th scope="col" class="smaller_font">Created</th>
         </tr>
         </thead>
         <tbody>
         {% if scrap_qs|length == 0 %}
               <tr>
-                <td colspan='5'>No scrap reasons recorded</td>
+                <td colspan='4'>No scrap reasons recorded</td>
               </tr>
         {% endif %}
              <tr>{% for pareto_item in scrap_qs %}
@@ -207,7 +205,7 @@
                      {{ pareto_item.scrap.code }} - {{ pareto_item.scrap.description }}</a></td>
                  <td class="central_pos">{{ pareto_item.qty }}</td>
                  <td class="smaller_font">{{ pareto_item.job }}</td>
-                 <td class="smaller_font">{{ pareto_item.modified|date:"H:i" }}</td>
+                 <td class="smaller_font">{{ pareto_item.created|date:"H:i" }}</td>
              </tr>
         {% endfor %}
         <tr>
