--- a/templates/gemba/pareto_view.html
+++ b/templates/gemba/pareto_view.html
@@ -10,7 +10,7 @@ Select a date
 <table class="table table-hover">
         <thead>
         <tr>
-          <th scope="col">Date</th>
+          <th scope="col">Pareto Id</th>
             <th scope="col">Line</th>
             <th scope="col">Shift</th>
             <th scope="col">Job OTG/End</th>
@@ -23,7 +23,7 @@ Select a date
         <tbody>
         {% for item in report_list %}
         <tr>
-            <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.date|date:"d-m-Y" }}</a></td>
+            <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></td>
             <td>{{ item.line }}</td>
             <td>{{ item.shift }}</td>
             <td>{% if item.job_otg is None %} ----- {% else %} {{ item.job_otg }} {% endif %}</td>
