Extra Report - Scrap Rate

--- a/templates/gemba/index.html
+++ b/templates/gemba/index.html
@@ -4,6 +4,7 @@
         <p><a href="{% url 'gemba_app:pareto-details' %}">Productivity View</a></p>
         <p><a href="{% url 'gemba_app:downtimes-view' %}">Downtimes View</a></p>
         <p><a href="{% url 'gemba_app:scraps-view' %}">Scrap View</a></p>
+        <p><a href="{% url 'gemba_app:scrap-rate-report' %}">Scrap Rate by Week</a></p>
         <p><a href="{% url 'gemba_app:quarantine-view' %}">Quarantine View</a></p>
         <p><a href="{% url 'gemba_app:chart' %}">Chart sample</a></p>
 {% endblock %}
