--- a/templates/gemba/scrap_rate.html
+++ b/templates/gemba/scrap_rate.html
@@ -1,13 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 <h4>Scrap rate by week:</h4>
-This week + Delta 3003 for now
+
 <table class="table table-hover">
         <thead>
         <tr>
             <th scope="col">Scrap</th>
-            <th scope="col">Qty</th>
-            <th scope="col">Scrap Rate</th>
+            <th scope="col">Qty (0)</th>
+            <th scope="col">Scrap Rate (0)</th>
+            <th scope="col">Qty (-1)</th>
+            <th scope="col">Scrap Rate (-1)</th>
+            <th scope="col">Qty (-2)</th>
+            <th scope="col">Scrap Rate (-2)</th>
+            <th scope="col">Qty (-3)</th>
+            <th scope="col">Scrap Rate (-3)</th>
+            <th scope="col">Qty (-4)</th>
+            <th scope="col">Scrap Rate (-4)</th>
         </tr>
         </thead>
         <tbody>
@@ -15,18 +23,42 @@ This week + Delta 3003 for now
         {% for object in report %}
             <tr>
                 <td>{{ object.scrap }}</td>
-                <td>{% if object.qty == 0 %} {% else %} {{ object.qty }} {% endif %}</td>
-                <td>{% if object.scrap_rate == 0 %} {% else %}{{ object.scrap_rate }}{% endif %}</td>
+                <td>{% if object.qty_0 == 0 %} {% else %} {{ object.qty_0 }} {% endif %}</td>
+                <td>{% if object.scrap_rate_0 == 0 %} {% else %}{{ object.scrap_rate_0 }}%{% endif %}</td>
+                <td>{% if object.qty_1 == 0 %} {% else %} {{ object.qty_1 }} {% endif %}</td>
+                <td>{% if object.scrap_rate_1 == 0 %} {% else %}{{ object.scrap_rate_1 }}%{% endif %}</td>
+                <td>{% if object.qty_2 == 0 %} {% else %} {{ object.qty_2 }} {% endif %}</td>
+                <td>{% if object.scrap_rate_2 == 0 %} {% else %}{{ object.scrap_rate_2 }}%{% endif %}</td>
+                <td>{% if object.qty_3 == 0 %} {% else %} {{ object.qty_3 }} {% endif %}</td>
+                <td>{% if object.scrap_rate_3 == 0 %} {% else %}{{ object.scrap_rate_3 }}%{% endif %}</td>
+                <td>{% if object.qty_4 == 0 %} {% else %} {{ object.qty_4 }} {% endif %}</td>
+                <td>{% if object.scrap_rate_4 == 0 %} {% else %}{{ object.scrap_rate_4 }}%{% endif %}</td>
             </tr>
         {% endfor %}
         <tr>
             <td> <b>Total scraps</b> </td>
-            <td><b>{{ total_weekly }}</b></td>
-            <td><b> {{ overall_scrap_rate }}</b> </td>
+            <td><b>{{ totals.total_weekly_0 }}</b></td>
+            <td><b> {{ totals.overall_scrap_rate_0 }}</b> </td>
+            <td><b>{{ totals.total_weekly_1 }}</b></td>
+            <td><b> {{ totals.overall_scrap_rate_1 }}</b> </td>
+            <td><b>{{ totals.total_weekly_2 }}</b></td>
+            <td><b> {{ totals.overall_scrap_rate_2 }}</b> </td>
+            <td><b>{{ totals.total_weekly_3 }}</b></td>
+            <td><b> {{ totals.overall_scrap_rate_3 }}</b> </td>
+            <td><b>{{ totals.total_weekly_4 }}</b></td>
+            <td><b> {{ totals.overall_scrap_rate_4 }}</b> </td>
         </tr>
          <tr>
             <td> <b>Total Made</b> </td>
-            <td><b>{{ total_output }}</b></td>
+            <td><b>{{ totals.total_output_0 }}</b></td>
+            <td> </td>
+             <td><b>{{ totals.total_output_1 }}</b></td>
+            <td> </td>
+             <td><b>{{ totals.total_output_2 }}</b></td>
+            <td> </td>
+             <td><b>{{ totals.total_output_3 }}</b></td>
+            <td> </td>
+             <td><b>{{ totals.total_output_4 }}</b></td>
             <td> </td>
         </tr>
         </tbody>
