--- a/templates/gemba/scrap_rate.html
+++ b/templates/gemba/scrap_rate.html
@@ -5,17 +5,25 @@
 <table class="table table-hover">
         <thead>
         <tr>
+            <td></td>
+            <td colspan="2"><b>Week 0</b></td>
+             <td colspan="2"><b>Week -1</b></td>
+             <td colspan="2"><b>Week -2</b></td>
+             <td colspan="2"><b>Week -3</b></td>
+             <td colspan="2"><b>Week -4</b></td>
+        </tr>
+        <tr>
             <th scope="col">Scrap</th>
-            <th scope="col">Qty (0)</th>
-            <th scope="col">Scrap Rate (0)</th>
-            <th scope="col">Qty (-1)</th>
-            <th scope="col">Scrap Rate (-1)</th>
-            <th scope="col">Qty (-2)</th>
-            <th scope="col">Scrap Rate (-2)</th>
-            <th scope="col">Qty (-3)</th>
-            <th scope="col">Scrap Rate (-3)</th>
-            <th scope="col">Qty (-4)</th>
-            <th scope="col">Scrap Rate (-4)</th>
+            <th scope="col">Qty</th>
+            <th scope="col">Scrap Rate</th>
+            <th scope="col">Qty</th>
+            <th scope="col">Scrap Rate</th>
+            <th scope="col">Qty</th>
+            <th scope="col">Scrap Rate</th>
+            <th scope="col">Qty</th>
+            <th scope="col">Scrap Rate</th>
+            <th scope="col">Qty</th>
+            <th scope="col">Scrap Rate</th>
         </tr>
         </thead>
         <tbody>
@@ -50,16 +58,11 @@
         </tr>
          <tr>
             <td> <b>Total Made</b> </td>
-            <td><b>{{ totals.total_output_0 }}</b></td>
-            <td> </td>
-             <td><b>{{ totals.total_output_1 }}</b></td>
-            <td> </td>
-             <td><b>{{ totals.total_output_2 }}</b></td>
-            <td> </td>
-             <td><b>{{ totals.total_output_3 }}</b></td>
-            <td> </td>
-             <td><b>{{ totals.total_output_4 }}</b></td>
-            <td> </td>
+            <td colspan="2"><b>{{ totals.total_output_0 }}</b></td>
+             <td colspan="2"><b>{{ totals.total_output_1 }}</b></td>
+             <td colspan="2"><b>{{ totals.total_output_2 }}</b></td>
+             <td colspan="2"><b>{{ totals.total_output_3 }}</b></td>
+             <td colspan="2"><b>{{ totals.total_output_4 }}</b></td>
         </tr>
         </tbody>
     </table>
